crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_multiline_open_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..48
  HTML_BLOCK_DIV@0..48
    HTML_BLOCK_TAG@0..32
      TEXT@0..4 "<div"
      NEWLINE@4..5 "\n"
      WHITESPACE@5..7 "  "
      HTML_ATTRS@7..17
        TEXT@7..11 "id=\""
        ATTR_ID@11..16 "multi"
        TEXT@16..17 "\""
      NEWLINE@17..18 "\n"
      WHITESPACE@18..20 "  "
      HTML_ATTRS@20..29
        TEXT@20..27 "class=\""
        ATTR_CLASS@27..28 "x"
        TEXT@28..29 "\""
      NEWLINE@29..30 "\n"
      TEXT@30..31 ">"
      NEWLINE@31..32 "\n"
    BLANK_LINE@32..33
      BLANK_LINE@32..33 "\n"
    PARAGRAPH@33..40
      TEXT@33..39 "Hello."
      NEWLINE@39..40 "\n"
    BLANK_LINE@40..41
      BLANK_LINE@40..41 "\n"
    HTML_BLOCK_TAG@41..48
      TEXT@41..47 "</div>"
      NEWLINE@47..48 "\n"
