crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_multiline_open_trailing_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  HTML_BLOCK@0..35
    HTML_BLOCK_TAG@0..5
      TEXT@0..4 "<div"
      NEWLINE@4..5 "\n"
    HTML_BLOCK_CONTENT@5..35
      TEXT@5..22 "  id=\"x\">trailing"
      NEWLINE@22..23 "\n"
      TEXT@23..27 "body"
      NEWLINE@27..28 "\n"
      TEXT@28..34 "</div>"
      NEWLINE@34..35 "\n"
