crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_multiline_open_trailing_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  HTML_BLOCK_DIV@0..35
    HTML_BLOCK_TAG@0..14
      TEXT@0..4 "<div"
      NEWLINE@4..5 "\n"
      WHITESPACE@5..7 "  "
      HTML_ATTRS@7..13
        TEXT@7..11 "id=\""
        ATTR_ID@11..12 "x"
        TEXT@12..13 "\""
      TEXT@13..14 ">"
    PARAGRAPH@14..28
      TEXT@14..22 "trailing"
      NEWLINE@22..23 "\n"
      TEXT@23..27 "body"
      NEWLINE@27..28 "\n"
    HTML_BLOCK_TAG@28..35
      TEXT@28..34 "</div>"
      NEWLINE@34..35 "\n"
