crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_nested_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..65
  HTML_BLOCK_DIV@0..65
    HTML_BLOCK_TAG@0..17
      TEXT@0..4 "<div"
      WHITESPACE@4..5 " "
      HTML_ATTRS@5..15
        TEXT@5..9 "id=\""
        ATTR_ID@9..14 "outer"
        TEXT@14..15 "\""
      TEXT@15..16 ">"
      NEWLINE@16..17 "\n"
    BLANK_LINE@17..18
      BLANK_LINE@17..18 "\n"
    HTML_BLOCK_DIV@18..57
      HTML_BLOCK_TAG@18..35
        TEXT@18..22 "<div"
        WHITESPACE@22..23 " "
        HTML_ATTRS@23..33
          TEXT@23..27 "id=\""
          ATTR_ID@27..32 "inner"
          TEXT@32..33 "\""
        TEXT@33..34 ">"
        NEWLINE@34..35 "\n"
      BLANK_LINE@35..36
        BLANK_LINE@35..36 "\n"
      PARAGRAPH@36..49
        TEXT@36..48 "deep content"
        NEWLINE@48..49 "\n"
      BLANK_LINE@49..50
        BLANK_LINE@49..50 "\n"
      HTML_BLOCK_TAG@50..57
        TEXT@50..56 "</div>"
        NEWLINE@56..57 "\n"
    BLANK_LINE@57..58
      BLANK_LINE@57..58 "\n"
    HTML_BLOCK_TAG@58..65
      TEXT@58..64 "</div>"
      NEWLINE@64..65 "\n"
